--- a/src/TypeDemo/TypeDemo.fsproj
+++ b/src/TypeDemo/TypeDemo.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SimpleQuery.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
