--- a/src/TypeDemo/TypeDemo.fsproj
+++ b/src/TypeDemo/TypeDemo.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data.SqlClient" Version="2.0.6" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
 
 </Project>
